@@ -1,3 +1,10 @@
+2010-09-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	PR bootstrap/45796
+	* Makefile.def (info-gcc, dvi-gcc, pdf-gcc, html-gcc):
+	Depend on all-build-libiberty.
+	* Makefile.in: Regenerate.
+
 2010-09-30  Michael Eager  <eager@eagercon.com>
 
 	* configure.ac (microblaze): Add target-libssp to noconfigdirs.
